--- a/demo/src/main/res/layout/recyclerview_item.xml
+++ b/demo/src/main/res/layout/recyclerview_item.xml
@@ -59,15 +59,18 @@
 
             <TextView
                 android:id="@+id/text_data"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:tag="Hover"/>
 
-            <TextView
-                android:id="@+id/text_data2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="blablabla"/>
+            <ImageView
+                android:id="@+id/sms"
+                android:layout_width="27dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:src="@drawable/sms"
+                android:clickable="true"/>
+
 
         </LinearLayout>
     </com.daimajia.swipe.SwipeLayout>
