--- a/demo/src/main/res/layout/recyclerview_item.xml
+++ b/demo/src/main/res/layout/recyclerview_item.xml
@@ -65,11 +65,12 @@
 
             <ImageView
                 android:id="@+id/sms"
-                android:layout_width="27dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
+                android:layout_width="50dp"
+                android:layout_height="75dp"
+
                 android:src="@drawable/sms"
-                android:clickable="true"/>
+                android:clickable="true"
+                android:layout_marginLeft="200dp" />
 
 
         </LinearLayout>
