--- a/demo/src/main/res/layout/recyclerview_item.xml
+++ b/demo/src/main/res/layout/recyclerview_item.xml
@@ -11,6 +11,7 @@
         swipe:rightEdgeSwipeOffset="0dp">
 
         <LinearLayout
+            android:id="@+id/upperLayout"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:background="#FF5534"
@@ -59,7 +60,7 @@
 
             <TextView
                 android:id="@+id/text_data"
-                android:layout_width="wrap_content"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:tag="Hover"/>
 
