--- a/demo/src/main/res/layout/recyclerview_item.xml
+++ b/demo/src/main/res/layout/recyclerview_item.xml
@@ -44,25 +44,32 @@
                 android:textColor="#FF5534" />
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:background="@drawable/item_selector"
             android:elevation="5dp"
             android:padding="10dp"
             android:weightSum="1"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/position"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/text_data"
-                android:layout_width="70dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:tag="Hover"/>
+                android:text="Blablabla"
+                android:textColor="@android:color/black"
+                android:textSize="22dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true" />
+            <View
+                android:layout_width="1px"
+                android:layout_height="75dp"
+                android:background="#FF909090"
+                android:layout_marginEnd="41dp"
+                android:layout_alignTop="@+id/sms"
+                android:layout_toStartOf="@+id/phone" />
 
             <ImageView
                 android:id="@+id/sms"
@@ -71,7 +78,19 @@
 
                 android:src="@drawable/sms"
                 android:clickable="true"
-                android:layout_marginLeft="100dp" />
+                android:layout_marginLeft="100dp"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/view"
+                android:layout_marginEnd="16dp" />
+            <View
+                android:layout_width="1px"
+                android:layout_height="75dp"
+                android:background="#FF909090"
+                android:id="@+id/view"
+                android:layout_alignParentTop="true"
+                android:layout_alignEnd="@+id/phone"
+                android:layout_marginEnd="60dp"
+                android:layout_alignParentEnd="true" />
 
             <ImageView
                 android:id="@+id/phone"
@@ -80,11 +99,13 @@
 
                 android:src="@drawable/phone"
                 android:clickable="true"
-                android:layout_marginLeft="50dp" />
+                android:layout_marginLeft="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" />
 
 
 
 
-        </LinearLayout>
+        </RelativeLayout>
     </com.daimajia.swipe.SwipeLayout>
 </LinearLayout>
